# atlas

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  initial-spec.md
Formula/: atlas.rb
docs/: index.html  install.sh
docs/skills/: mac-cleanup.html  mac-cleanup.md
skills/mac-cleanup/: SKILL.md
src/: actions.rs  cli.rs  index.rs  lenses.rs  main.rs  manifest.rs  model.rs  probe.rs
src/scan/: agent_skills.rs  apps.rs  brew.rs  claude_skills.rs  codex_skills.rs  mas.rs  mod.rs  npm.rs  pipx.rs  uv.rs  zerobrew.rs
src/tui/: app.rs  ui.rs
