[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
description = "Native control plane for your Mac's software stack"
license = "MIT"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
walkdir = "2"
anyhow = "1"
directories = "5"
humansize = "2"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
